--- a/gb/24/11/11/n14368948.md
+++ b/gb/24/11/11/n14368948.md
@@ -2,9 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>陕西汉钢欠社保工资十年 工人聚县政府追薪</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14368949-GettyImages-922808634-600x400.jpg" />///image2=```diff
-- 陕西汉钢公司十年来拖欠数千名工人工资、社保、医保等款项，金额达到数亿元，工人们连续近一个月到当地县政府前讨薪。图为陕西一钢铁工厂。(Fred Dufour/AFP via Getty Images) 
-```
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14368949-GettyImages-922808634-600x400.jpg" />
 <h6>陕西汉钢公司十年来拖欠数千名工人工资、社保、医保等款项，金额达到数亿元，工人们连续近一个月到当地县政府前讨薪。图为陕西一钢铁工厂。(Fred Dufour/AFP via Getty Images) </h6>
 <hr>
 	<p>【大纪元2024年11月12日讯】（大纪元专题部记者宁芯采访报导）中国西部地区重要的钢铁企业陕西汉中钢铁集团有限公司（简称汉钢公司）十年来拖欠数千名工人工资、社保、医保等款项，金额达到数亿元，导致工人生活困难。工人们连续近一个月到当地县政府前追薪，11月6日与7日达到高峰。</p>
@@ -19,15 +17,15 @@
 <p>大纪元记者向县政府与汉钢公司致电，电话均无法打通。</p>
 <p>公开资料显示，汉钢公司最初是由汉中钢铁厂、汉中化工总厂、汉中铁合金厂、略阳水泥厂等多家中共国有企业合并组成，在2000年企业政策性破产改制后，逐步形成了集采选、焦化、炼轧为一体的陕西省最大的钢铁联合民营企业，主要产品为钢带，是西部百万吨级精品钢带生产基地。</p>
 <p>据工人们透露，这个表面光鲜的钢铁大企，内部早已千疮百孔，公司一直以亏损为由，不给工人解决薪资问题。但是工人们了解到，社保资金等款项被公司老板挪用，因为现老板来自四川，他在四川也有几家企业，将汉钢的资金挪用到四川，导致公司目前的亏损状况，政府部门也不敢轻易接盘，因此导致工人长期维权无果。</p>
-<p><a title="11月7日，陕西省汉中市汉钢集团工人在勉县政府门前维权讨薪；广东惠阳区政府，灿邦珑庭烂尾楼业主前往市政府维权，遭警方强行推搡拖拽进警用大巴带走。" loading="lazy" data2-src=""></a><a href="https://d27l6dsifacvoi.cloudfront.net/N7uy8xhBg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1h6a56ns8753VjvgVNZXbMFS51031c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p><a title="11月7日，陕西省汉中市汉钢集团工人在勉县政府门前维权讨薪；广东惠阳区政府，灿邦珑庭烂尾楼业主前往市政府维权，遭警方强行推搡拖拽进警用大巴带走。" loading="lazy" data2-src=""></a><a href="https://dsgpxulwvf05x.cloudfront.net/G1ky8xhBj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1h6a56ns8753VjvgVNZXbMFS51031c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
 <p>责任编辑：连书华#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/3/n13859016.md#1">中国钢企三季报业绩普降 宝钢净利骤降七成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296773.md#1">新日铁结束与宝钢合资 减少70%在华产能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360333.md#1">中国经济下行 宝钢股份三季度净利降超六成</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642145.md#1">贵州强推挖坟火葬政策 百姓持械抗议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/1/n10446785.md#1" target="_blank">共产暴政录：从船王卢作孚自杀看中共劫财手段</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/23/n11890264.md#1" target="_blank">《转法轮》为波兰青年打造全新的生命</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
